2.10.1 (2024-03-13)
-----------------------------
* Deltabest Widget
  - Add "deltabest_source" option,
    which sets lap time source for deltabest display.
    Available values are:
      "Best" = all time best lap time,
      "Session" = session best lap time,
      "Stint" = stint best lap time,
      "Last" = last lap time.

* Delta Module
  - Stint deltabest now only resets if
    vehicle stops in pit lane.

* Vehicle Brand Editor & Vehicle Class Editor
  - "Add" button will now add all vehicle data
    found from current active session.
    Note, existing data will not be changed.

* Misc
  - Updated Deltabest Widget, Brands preset, Classes preset
    sections in User Guide.

2.10.0 (2024-03-10)
-----------------------------
* Relative, Rivals, Standings Widget
  - [New]Added "show_brand_logo" option,
    which shows user-defined brand logo if available.
    A new "brandlogo" is added to TinyPedal folder,
    which is used for storing brand logo image.
    Note: TinyPedal does not provide brand logo image assets,
    it is up to user to prepare images.
    Maximum "PNG" file size is limited to "1MB".
    See "Brand logo" section in User Guide for customization guide.
  - Added "brand_logo_width" option,
    which sets maximum brand logo display width in pixels.
    Note, maximum brand logo display height is
    automatically adapted to "font_size".

* Fuel Widget
  - Renamed all "*_mins" options to "*_minutes"
    for better readability & consistency.

* Tyre wear Widget
  - [New]Added "show_lifespan_minutes" option,
    which shows tyre lifespan in minutes.
  - Added "warning_threshold_minutes" option,
    which sets warning threshold for
    estimated tyre lifespan in minutes.
    Default is "6" minutes.
  - Renamed "show_lifespan" option to "show_lifespan_laps".

* Instrument Widget
  - Improved wheel radius sampling and calculation.

* Vehicle Brand Editor
  - No longer overrides existing brand name